# barcode

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
barcode/: main.py
barcode/api/routes/: imgproc.py
barcode/core/: config.py
barcode/models/: barcode.py
barcode/services/: barcode_service.py
